# ibkr_options

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
scripts/: diagnose_ibkr_market_data.py
src/: configuration.py
src/analytics/: __init__.py  liquidity.py  pop.py  returns.py  risk_flags.py
src/broker/: __init__.py  base.py  contracts.py  ibkr_client.py  mock_broker.py
src/dashboard/: app.py
src/data/: __init__.py  models.py  options_chain.py  universe.py  universe_discovery.py
src/portfolio/: __init__.py  models.py  sizing.py
src/reporting/: __init__.py  logger.py  output.py
src/strategy/: __init__.py  csp_scanner.py  models.py  ranker.py
tests/: test_analytics_liquidity.py  test_analytics_pop.py  test_analytics_returns.py  test_analytics_risk_flags.py  test_csp_scanner.py  test_dashboard_scan_controls.py  test_ibkr_client_import.py  test_mock_broker.py  test_portfolio_sizing.py  test_scaffold.py  test_scan_target_integration.py  test_strategy_ranker.py  test_target_sizing.py  test_universe_discovery.py
