[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-options"
version = "0.1.0"
description = "Python MVP scaffold for scanning IBKR weekly options and recommending cash-secured puts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ibapi>=9.81",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "streamlit>=1.34",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ibkr-options = "main:app"

[tool.setuptools]
py-modules = ["main"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
